--- a/ext/css/theme-minimal.css
+++ b/ext/css/theme-minimal.css
@@ -138,8 +138,8 @@ iframe.yomitan-popup[data-theme-mode='minimal'][data-theme='dark'] {
     font-size: calc(1em * 10 / 14);
     font-weight: 500;
     color: var(--text-color-light2);
-    margin-top: 0.35em;
-    margin-bottom: 0.6em;
+    margin-top: 0.2em;
+    margin-bottom: 0.3em;
     letter-spacing: 0.02em;
 }
 
@@ -164,8 +164,8 @@ iframe.yomitan-popup[data-theme-mode='minimal'][data-theme='dark'] {
 :root[data-theme-mode='minimal'] .inflection {
     display: inline-block;
     font-size: calc(1em * 11 / 14);
-    padding: 0.15em 0.4em;
-    margin-right: 0.5em;
+    padding: 0.1em 0.25em;
+    margin-right: 0.25em;
     border-radius: 4px;
     background-color: var(--tag-default-background-color);
     color: var(--tag-text-color);
@@ -173,5 +173,5 @@ iframe.yomitan-popup[data-theme-mode='minimal'][data-theme='dark'] {
 
 /* Compact the inflection rule chain container */
 :root[data-theme-mode='minimal'] .inflection-rule-chain {
-    margin: 0.25em 0;
+    margin: 0.15em 0;
 }
